More release prep.

--- a/test/visual.html
+++ b/test/visual.html
@@ -2,5 +2,6 @@
 
 <body>
   <h1>simplex-noise.js visual tests</h1>
+  <!-- open me using npx parcel test/visual.html -->
   <script type="module" src="visual.ts" />
 </body>
